--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <nav class="navbar navbar-danger shadow rounded justify-content-center">
       <div class="navbar-brand" href="#">
-        <img src="../images/picon256.ico" width="30" height="30" class="d-inline-block align-top" alt=""><b>
+        <img src="./images/picon256.ico" width="30" height="30" class="d-inline-block align-top" alt=""><b>
           Persevere Annual Performance Review & Self-Evaluation</b>
       </div>
     </nav>
@@ -58,14 +58,10 @@
               established
               employee's developmental goals and supervisor position expectations throughout the year.
             </p>
-            <br><br>
-
-
-
+            <br>
+            <br>
             <h6><b>The Annual Performance review highlights the following areas of an Employees overall
                 performance:</b></h6>
-
-
             <ol type="A">
               <li><b>Essential Job Functions/Responsibilities:</b>
                 Select two or three essential job functions/responsibilities for the evaluation of an Employee's job
@@ -481,12 +477,10 @@
         <br>
         <hr>
         <br>
-
         <div class="container">
           <div>
             <div>
               <b>Comments</b>
-
               <textarea class="form-control" id="Textarea1" rows="3"></textarea>
             </div>
             <br><br>
@@ -497,8 +491,6 @@
           </div>
         </div>
         <br><br>
-
-
 
 
 
