--- a/index.html
+++ b/index.html
@@ -227,11 +227,7 @@
       <textarea class="form-control" id="Textarea1" rows="4"></textarea>
     </div>
   </div>
-
-
-
   <div>
-
     <div class="container">
       <br><br>
       <hr>
@@ -451,10 +447,10 @@
         </div>
         <br><br><br><br>
         <div>
-          <b><u>Overall Performance Rating</u></b>
-          <h6>Please check on the appropriate box below that signifies your overall performance rating</h6>
+          <p><b><u>Overall Performance Rating</u></b>
+          (Please check on the appropriate box below that signifies your overall performance rating)</p>
           <br>
-          <div class="checkbox ">
+          <div class="checkbox">
             <label><input type="checkbox" value=""> Does Not Meet Expectations</label>
           </div>
           <div class="checkbox">
