bottom button push

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div class="container">
   <br><br>
   <div class="container">
     <nav class="navbar navbar-danger shadow rounded justify-content-center">
@@ -482,11 +483,18 @@
             <br><br>
             <div>
               <b>Employee Signature/Name</b>
-              <input class="form-control form-control-sm input" id="input type=" text">
+              <input class="form-control form-control-sm input" id="input type=" text" required>
             </div>
           </div>
         </div>
         <br><br>
+        <div class="container">
+          <div class="d-flex flex-column">
+            <button class="btn-sm btn-info">Submit Annual Performance Review</button>
+          </div>
+        </div>
+        <br><br>
+      </div>
 
 
 
