--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <br><br>
     <div class="container">
         <nav class="navbar navbar-danger shadow rounded justify-content-center">
-            <div class="navbar-brand" href="#">
-                <img src="./images/picon256.ico" width="30" height="30" class="d-inline-block align-top" alt=""><b>
-                    Persevere Annual Performance Review & Self-Evaluation</b>
+            <div>
+                <img src="./images/picon256.ico" width="30" height="30" class="d-inline-block align-top" alt="">
+                <span><b>Persevere Annual Performance Review & Self-Evaluation</b></span>
             </div>
         </nav>
     </div>
@@ -69,8 +69,10 @@
                             established
                             employee's developmental goals and supervisor position expectations throughout the year.
                         </p>
+
                         <br>
                         <br>
+
                         <h6><b>The Annual Performance review highlights the following areas of an Employees overall
                                 performance:</b></h6>
                         <ol type="A">
@@ -97,6 +99,7 @@
                         </ol>
 
                         <br>
+
                         <h6>Assigned goals should be objective and subjective, using <b>SMART</b> Goals that are
                             <b>S</b>pecific,
                             <b>M</b>easurable, <b>A</b>ttainable, <b>R</b>esult-oriented, & <b>T</b>ime-specific.
@@ -104,11 +107,11 @@
                             <b>SMART</b> Goals, Employee goals must be aligned with one of the performance factors
                             outlined below:
                         </h6>
-                        <div>
-                        </div>
+
                     </div>
                 </div>
             </div>
+
             <div class="container">
                 <div>
                     <b>Performance Factors</b>
@@ -139,11 +142,12 @@
                             when necessary.</li>
                     </ul>
                 </div>
+
                 <br><br>
                 <hr>
                 <br><br>
-                <p>
-                    <b>A. Essential Job Functions & Responsibilities:</b> Use this section to record and provide
+
+                <p><b>A. Essential Job Functions & Responsibilities:</b> Use this section to record and provide
                     feedback on two
                     or
                     three essential job functions and/or responsibilities for this review period. Add more sections
@@ -151,9 +155,10 @@
                     needed.(copy/paste) In the space provided , describe the Employee's performance and give
                     suggestions for
                     continual development.</p>
-                <br>
-                <b> Use the following scale to asses Employee performance:</b>
 
+                <br>
+
+                <b> Use the following scale to asses Employee performance:</b>
                 <ol type="A">
                     <li><b>Does Not Meet Expectations-</b> Performance Is consistently below expectations in areas
                         of
@@ -162,6 +167,7 @@
                         to
                         constructive feedback or has not improved his/her performance.
                     </li>
+
                     <li><b>Meets Some Expectations-</b> Employee performs satisfactory in some aspects of his/her
                         assigned
                         responsibilities, but not in others. Performance may be marginal or inconsistent.
@@ -170,6 +176,7 @@
                         to
                         meet expectations.
                     </li>
+
                     <li><b>Meets Expectations-</b> Usually meets performance expectations in a satisfactory manor.
                     </li>
                     <li><b>Exceeds Expectations-</b> Consistently meets, and often exceeds performance expectations.
@@ -190,7 +197,9 @@
                     <h5>Job Function / Responsibility</h5>
                     <label for="Textarea">Responsibility #1</label>
                     <input type="text" class="form-control">
+
                     <br>
+
                     <select>
                         <option>Does Not Meet Expectations</option>
                         <option>Meets Some Expectations</option>
@@ -199,17 +208,23 @@
                         <option>Significantly Exceeds Expectations</option>
                     </select>
                 </div>
+
                 <br>
+
                 <div>
                     <label for="Textarea">Explain</label>
                     <textarea class="form-control" id="Textarea1" rows="4"></textarea>
                 </div>
+
                 <br><br><br>
+
                 <div>
                     <h5>Job Function / Responsibility</h5>
                     <label for="Textarea">Responsibility #2</label>
                     <input type="text" class="form-control">
+
                     <br>
+
                     <select>
                         <option>Does Not Meet Expectations</option>
                         <option>Meets Some Expectations</option>
@@ -218,17 +233,23 @@
                         <option>Significantly Exceeds Expectations</option>
                     </select>
                 </div>
+
                 <br>
+
                 <div>
                     <label for="Textarea">Explain</label>
                     <textarea class="form-control" id="Textarea1" rows="4"></textarea>
                 </div>
+
                 <br><br><br>
+
                 <div>
                     <h5>Job Functions / Responsibilities</h5>
                     <label for="Textarea">Responsibility #3</label>
                     <input type="text" class="form-control">
+
                     <br>
+
                     <select>
                         <option>Does Not Meet Expectations</option>
                         <option>Meets Some Expectations</option>
@@ -237,7 +258,9 @@
                         <option>Significantly Exceeds Expectations</option>
                     </select>
                 </div>
+
                 <br>
+
                 <div>
                     <label for="Textarea">Explain</label>
                     <textarea class="form-control" id="Textarea1" rows="4"></textarea>
@@ -259,11 +282,13 @@
                     give
                     suggestions
                     for continued development.</p>
+
                 <br>
 
                 <h5>Organizational Goals</h5>
                 <label for="Textarea">Goal</label>
                 <input type="text" class="form-control">
+
                 <br>
                 <select>
                     <option>Does Not Meet Expectations</option>
